--- a/views/root.ejs
+++ b/views/root.ejs
@@ -4,12 +4,43 @@
 
     <title>Warframe Info</title>
     <link rel='stylesheet' href='css/bootstrap.css' />
+    <link rel='stylesheet' href='css/main.css' />
 
 </head>
 
 <body>
 
-    <div class="container m-2 bg-dark text-light w-25 rounded rounded-4">
+    <div class="fs-1 m-2">News:</div>
+    <hr>
+
+    <div class="d-flex justify-content-center flex-wrap">
+
+        <% warframe_api_data[0]['news'].forEach(function(article) { %>
+
+            <div class="container m-2 dataItem bg-danger text-light rounded rounded-4">
+
+                <div class="row">
+
+                    <div class="col p-2 fs-5">
+
+                        <a href="<%= article['link'] %>"" class=" text-decoration-none text-light">
+                            <%= article['message'] %>
+                        </a>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <% }); %>
+
+    </div>
+
+    <div class="fs-1 m-2">Game World:</div>
+    <hr>
+
+    <div class=" container m-2 dataItem bg-dark text-light rounded rounded-4">
 
         <div class="row">
 
@@ -19,24 +50,68 @@
 
             </div>
 
-
         </div>
 
         <div class="row">
 
             <div class="col p-2">
 
-                <%= warframe_api_data[0]['cetusCycle']['isDay'] %>
+                Day: <%= warframe_api_data[0]['cetusCycle']['isDay'] %>
 
             </div>
 
             <div class="col p-2">
 
-                <%= warframe_api_data[0]['cetusCycle']['timeLeft'] %>
+                <%= warframe_api_data[0]['cetusCycle']['shortString'] %>
 
             </div>
 
         </div>
+
+    </div>
+
+    <div class="fs-1 m-2">Alerts:</div>
+    <hr>
+
+    <div class="d-flex">
+
+        <% warframe_api_data[0]['alerts'].forEach(function(alert) { %>
+
+            <div class="container m-2 dataItem bg-dark text-light rounded rounded-4">
+
+                <div class="row">
+
+                    <div class="col p-2 fs-3">
+
+                        <%= alert['mission']['description'] %>
+
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col p-2">
+
+                        <%= alert['mission']['node'] %> (<%= alert['mission']['type'] %>) <%= alert['eta'] %>
+
+                    </div>
+
+                </div>
+
+                <div class="row">
+
+                    <div class="col p-2">
+
+                        <%= alert['mission']['reward']['asString'] %>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <% }); %>
 
     </div>
 
