Added getting infomation from market

--- a/views/root.ejs
+++ b/views/root.ejs
@@ -12,7 +12,7 @@
 
     <div class="d-flex flex-nowrap">
 
-        <div class="d-flex flex-column bg-dark text-light p-3 w-25">
+        <div class="d-flex flex-column bg-dark text-light p-3 sidebar">
 
             <span class="fs-3">WarframeInfo</span>
             <hr>
@@ -27,7 +27,7 @@
 
                 <li>
 
-                    <a class="nav-link text-light" href="/">Market</a>
+                    <a class="nav-link text-light" href="/market">Market</a>
 
                 </li>
 
