--- a/views/market.ejs
+++ b/views/market.ejs
@@ -61,7 +61,7 @@
 
             <div class="d-flex flex-column flex-wrap m-2">
 
-                <% searchResults.forEach(function(order) { %>
+                <% search_results.forEach(function(order) { %>
 
                     <div class="d-flex flex-column p-2 m-2 bg-dark text-light rounded rounded-4">
 
